--- a/backend/Poin_Of_Sale/src/main/resources/application.properties
+++ b/backend/Poin_Of_Sale/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:vristo}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:}
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:844855}
 spring.jpa.hibernate.ddl-auto=update
