--- a/backend/Poin_Of_Sale/src/main/resources/application.properties
+++ b/backend/Poin_Of_Sale/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:}
 spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:844855}
+spring.datasource.password=${MYSQL_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
